--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,15 +9,21 @@
 $(function() {
   $(".js-more").on("click", function() {
     var id = $(this).data("id");
-    $.get("/products/" + id + "/description", function(description) {
-      $.get("/products/" + id + "/inventory", function(inventory) {
-        var inventoryText = "<strong>Available</strong>";
-        if(inventory === "false"){
-          inventoryText = "<strong>Sold Out</strong>";
-        }
-        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
-        $("#product-" + id).html(descriptionText);
-      });
+    $.get("/products/" + id + ".json", function(product) {
+      var inventoryText = "<strong>Available</strong>";
+      if(product['inventory'] === 0){
+        inventoryText = "<strong>Sold Out</strong>";
+      }
+      var descriptionText = "<p>" + product['description'] + "</p><p>" + inventoryText + "</p>";
+
+      // here's where I add the list!
+
+      descriptionText += '<p>Orders:</p><ul>'
+      let orders = product['orders']
+      orders.forEach( order => {
+      descriptionText += "<li>ID: " + order['id'] + " --- created at: " + order['created_at'] + "</li>" })
+      descriptionText += '</ul>'
+      $("#product-" + id).html(descriptionText);
     });
   });
 });
