--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,19 @@
 <a href="#" class="js-next" data-id="<%=@product.id%>">Next Product</a>
 <h1 class="productName"><%= @product.name %></h1>
-<p class="productInventory"><%= @product.inventory %></p>
-<p class="productPrice"><%= @product.price %></p>
+<p class="productInventory">Inv: <%= @product.inventory %></p>
+<p class="productPrice">Price: <%= @product.price %></p>
 <p class="productDescription"><%= @product.description %></p>
 
 <script type="text/javascript" charset="utf-8">
 $(function () {
-  $(".js-next").on("click", function() {
+  $(".js-next").on("click", function(event) {
+    event.preventDefault()
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
     $.get("/products/" + nextId + ".json", function(data) {
       $(".productName").text(data["name"]);
-      $(".productPrice").text(data["price"]);
+      $(".productPrice").text('Price: ' + data["price"]);
       $(".productDescription").text(data["description"]);
-      $(".productInventory").text(data["inventory"]);
+      $(".productInventory").text('Inv: ' + data["inventory"]);
       // re-set the id to current on the link
       $(".js-next").attr("data-id", data["id"]);
     });
